tests/paczka1/small_fuzzy/70383105.err
Error in line 5: t§pUqBXm0 S464 5,3
Error in line 7: tMpUqBXm0 S464 y3,0
Error in line 6: 3GichNUj S464 3,1
Error in line 12: mSUSVIyfp4 S500 61,1
